--- a/librechat.config.yaml
+++ b/librechat.config.yaml
@@ -54,25 +54,18 @@ endpoints:
     allowedProviders:
       - "azureOpenAI"
   azureOpenAI:
-    titleModel: "gpt-5.1"
+    titleModel: "gpt-4o"
     plugins: false
     assistants: false
     summarize: false
-    summaryModel: "gpt-5.1"
+    summaryModel: "gpt-4o"
     titleConvo: true
     titleMethod: "completion"
     groups:
       - group: "rg-pcode-azure-ai-foundry" # arbitrary name
         apiKey: "${AZURE_FOUNDRY_API_KEY}"
         instanceName: "${AZURE_OPENAI_INSTANCE_NAME}" # name of the resource group or instance
-        # baseURL: https://prod.example.com
-        # additionalHeaders:
-        #   X-Custom-Header: value
         models:
-          gpt-5.1:
-            deploymentName: gpt-5.1-2
-            version: "2025-01-01-preview"
-            default: true
           gpt-4o:
             deploymentName: gpt-4o
             version: "2025-01-01-preview"
