--- a/librechat.config.yaml
+++ b/librechat.config.yaml
@@ -53,26 +53,26 @@ endpoints:
     capabilities: ["tools"]
     allowedProviders:
       - "azureOpenAI"
-  # azureOpenAI:
-  #   titleModel: "gpt-4o"
-  #   plugins: false
-  #   assistants: false
-  #   summarize: false
-  #   summaryModel: "gpt-4o"
-  #   titleConvo: true
-  #   titleMethod: "completion"
-  #   groups:
-  #     - group: "rg-pcode-azure-ai-foundry" # arbitrary name
-  #       apiKey: "${AZURE_FOUNDRY_API_KEY}"
-  #       instanceName: "${AZURE_OPENAI_INSTANCE_NAME}" # name of the resource group or instance
-  #       models:
-  #         gpt-4o:
-  #           deploymentName: gpt-4o
-  #           version: "2025-01-01-preview"
-  #     - group: "azure-mistral"
-  #       apiKey: "${AZURE_FOUNDRY_API_KEY}"
-  #       baseURL: "${AZURE_MISTRAL_BASEURL}"
-  #       serverless: true
-  #       dropParams: ["user"]
-  #       models:
-  #         Mistral-Large-3: true
+  azureOpenAI:
+    titleModel: "gpt-4o"
+    plugins: false
+    assistants: false
+    summarize: false
+    summaryModel: "gpt-4o"
+    titleConvo: true
+    titleMethod: "completion"
+    groups:
+      - group: "rg-pcode-azure-ai-foundry" # arbitrary name
+        apiKey: "${AZURE_FOUNDRY_API_KEY}"
+        instanceName: "${AZURE_OPENAI_INSTANCE_NAME}" # name of the resource group or instance
+        models:
+          gpt-4o:
+            deploymentName: gpt-4o
+            version: "2025-01-01-preview"
+      - group: "azure-mistral"
+        apiKey: "${AZURE_FOUNDRY_API_KEY}"
+        baseURL: "${AZURE_MISTRAL_BASEURL}"
+        serverless: true
+        dropParams: ["user"]
+        models:
+          Mistral-Large-3: true
