chore: add Supabase MCP server configuration to librechat settings

--- a/librechat.config.yaml
+++ b/librechat.config.yaml
@@ -79,3 +79,8 @@ endpoints:
       summarize: true
       summaryModel: "gpt-4o"
       modelDisplayLabel: "Azure Foundry"
+
+mcpServers:
+  Supabase:
+    type: sse
+    url: "${SUPABASE_MCP_URL}"
