chore: update Supabase MCP server configuration to use lowercase key and add OAuth and server instructions

--- a/librechat.config.yaml
+++ b/librechat.config.yaml
@@ -81,6 +81,8 @@ endpoints:
       modelDisplayLabel: "Azure Foundry"
 
 mcpServers:
-  Supabase:
+  supabase:
     type: streamable-http
     url: "${SUPABASE_MCP_URL}"
+    requiresOAuth: true
+    serverInstructions: true
